--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # FloraExam
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/Sustainscapes/FloraExam/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/Sustainscapes/FloraExam/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of FloraExam is to ...
