--- a/inst/rmarkdown/templates/mock_exam/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/mock_exam/skeleton/skeleton.Rmd
@@ -16,12 +16,13 @@ params:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, error = FALSE)
 library(ggplot2)
-library(ggtern)
+#library(ggtern)
+library(kableExtra)
 ```
 
 `r params$Artscore`
 
-The species list and their parameters are shown in table \@ref(tab:Species)
+The species list and their parameters are shown in table 1
 
 ```{r Species, echo = F}
 Table <- params$SpeciesList
@@ -39,7 +40,7 @@ print(params$Histogram)
 Finally the ternary plot for the CSR values can be seen in figure \@ref(fig:CSR)
 
 ```{r CSR, fig.cap= "CSR values for the species in the plot"}
-Dataset <- params$Dataset
-G <- ggtern::ggtern(data = Dataset, ggtern::aes(C, R, S)) + ggplot2::geom_point() + ggtern::theme_arrowlength()
-print(G)
+#Dataset <- params$Dataset
+#G <- ggtern::ggtern(data = Dataset, ggtern::aes(C, R, S)) + ggplot2::geom_point() + ggtern::theme_arrowlength()
+#print(G)
 ```
