Added ggtern to the RMD

--- a/inst/rmarkdown/templates/mock_exam/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/mock_exam/skeleton/skeleton.Rmd
@@ -16,7 +16,7 @@ params:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, error = FALSE)
 library(ggplot2)
-#library(ggtern)
+library(ggtern)
 library(kableExtra)
 ```
 
